--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,90 @@
-.App {
-  text-align: center;
+/* HEADER */
+
+.header{
+  display: flex;
+  /* background-color: black; */
+  height: 4rem;
+  width: 100%;
+  box-shadow: rgb(172, 172, 172) 10px 0px 10px 2px;
+  justify-content: space-between;
+  /* align-items: center; */
+}
+.header-right{
+  padding: 0 1rem;
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
+/* LOGIN */
+.login-form{
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  flex-direction: column;
+}
+.login-box{
+ height: 25rem;
+  width: 23rem;
+  margin-top: 12rem;
 }
 
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
+.container{
   display: flex;
   flex-direction: column;
+  /* background-color: yellow; */
   align-items: center;
   justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+}
+.main-section{
+  /* background-color: red; */
+  height: 35rem;
+  width: 23rem;
+}
+.main-box{
+  display: flex;
+  flex-direction: column;
+  height: 25rem;
+  width: 23rem;
+  display: flex;
+  background-color: rgb(194, 194, 194);
+  margin: 3rem 0 0 0;
+  border-radius: 8px;
+
+}
+.dropdown{
+  display: flex;
+  justify-content: center;
+  /* align-items: center; */
+}
+.btn-section{
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  margin: 2rem 0 0 0 ;
 }
 
-.App-link {
-  color: #61dafb;
-}
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+
+
+
+
+
+
+
+.select{
+  border: 1px solid black;
+  width: 5rem;
+  display: flex;
+  /* justify-content: center; */
+}
+.space{
+  width: 10rem;
+  height: 1.8rem;
+}
+.d-flex{
+  display: flex;
+}
+.justify-c{
+  justify-content: center;
+}
+.align-c {
+  align-items: center;
 }
