--- a/src/App.css
+++ b/src/App.css
@@ -1,6 +1,6 @@
 /* HEADER */
 
-.header{
+.header {
   display: flex;
   /* background-color: black; */
   height: 4rem;
@@ -9,42 +9,41 @@
   justify-content: space-between;
   /* align-items: center; */
 }
-.header-right{
+.header-right {
   padding: 0 1rem;
   display: flex;
   margin: 1rem 0;
-
 }
 .username {
   padding-right: 1rem;
 }
 
 /* LOGIN */
-.login-form{
+.login-form {
   display: flex;
   justify-content: center;
   align-items: center;
   flex-direction: column;
 }
-.login-box{
- height: 25rem;
+.login-box {
+  height: 25rem;
   width: 23rem;
   margin-top: 12rem;
 }
 
-.container{
+.container {
   display: flex;
   flex-direction: column;
   /* background-color: yellow; */
   align-items: center;
   justify-content: center;
 }
-.main-section{
+.main-section {
   /* background-color: red; */
   height: 35rem;
   width: 23rem;
 }
-.main-box{
+.main-box {
   display: flex;
   flex-direction: column;
   height: 25rem;
@@ -53,43 +52,82 @@
   background-color: rgb(194, 194, 194);
   margin: 3rem 0 0 0;
   border-radius: 8px;
-
 }
 
-.scroll-view{
+.scroll-view {
   overflow-y: scroll;
   max-height: 200px;
 }
 
-.serials-title{
+.serials-title {
   margin: 0;
-word-wrap: break-word; }
-.dropdown{
+  word-wrap: break-word;
+}
+.dropdown {
   display: flex;
   justify-content: center;
   /* align-items: center; */
 }
-.btn-section{
+.btn-section {
   display: flex;
   align-items: center;
   justify-content: space-between;
-  margin: 2rem 0 0 0 ;
+  margin: 2rem 0 0 0;
+}
+.table {
+  width: 15rem;
+  height: 10rem;
+  /* background-color: brown; */
+}
+.t-d {
+  padding-left: 3rem;
+}
+/* background-color: chartreuse; */
+.t-d2 {
+  padding-left: 1rem;
 }
 
-.select{
+.p-2 {
+  padding: 10px;
+}
+
+.px-2 {
+  padding-left: 10px;
+  padding-right: 10px;
+}
+
+.py-1 {
+  padding-top: 5px;
+  padding-bottom: 5px;
+}
+
+.py-2 {
+  padding-top: 10px;
+  padding-bottom: 10px;
+}
+
+.bg-light {
+  background-color: #eee;
+}
+
+.border {
+  border: 1px solid #eee;
+}
+
+.select {
   border: 1px solid black;
   width: 5rem;
   display: flex;
   /* justify-content: center; */
 }
-.space{
+.space {
   width: 10rem;
   height: 1.8rem;
 }
-.d-flex{
+.d-flex {
   display: flex;
 }
-.justify-c{
+.justify-c {
   justify-content: center;
 }
 .align-c {
