--- a/src/App.css
+++ b/src/App.css
@@ -96,6 +96,23 @@
   padding-right: 10px;
 }
 
+.px-1 {
+  padding-left: 5px;
+  padding-right: 5px;
+}
+
+.pl-1 {
+  padding-left: 5px;
+}
+
+.pr-1 {
+  padding-right: 5px;
+}
+
+.p-1 {
+  padding: 5px;
+}
+
 .py-1 {
   padding-top: 5px;
   padding-bottom: 5px;
@@ -137,3 +154,5 @@
 .active {
   background-color: #b3e5fc;
 }
+
+
